--- a/client/src/components/Layout/Header.module.css
+++ b/client/src/components/Layout/Header.module.css
@@ -27,3 +27,10 @@
     object-fit: cover;
     transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
   }
+
+  .nav{
+    display: flex;
+    justify-content: space-around;
+  }
+
+
