client -> implemented connecting to firebase for login and registering, and auto logout mechanisim

--- a/client/src/components/Register/Register.module.css
+++ b/client/src/components/Register/Register.module.css
@@ -61,3 +61,10 @@
   flex-grow: 1;
   width: 100%;
 }
+
+.warning {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 0.875em;
+  color: #dc3545;
+}
