--- a/client/src/components/Cart/Cart.module.css
+++ b/client/src/components/Cart/Cart.module.css
@@ -52,3 +52,25 @@
   color: #dc3545;
   text-align: center;
 }
+
+.bump {
+  animation: bump 1000ms ease-out;
+}
+
+@keyframes bump {
+  0% {
+    transform: scale(0.8);
+  }
+  10% {
+    transform: scale(0.9);
+  }
+  30% {
+    transform: scale(1);
+  }
+  /* 50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1);
+  } */
+}
