--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -49,3 +49,25 @@
   width: 100%;
   margin-top: 34px;
 }
+
+.bump {
+  animation: bump 1000ms ease-out;
+}
+
+@keyframes bump {
+  0% {
+    transform: scale(0.8);
+  }
+  10% {
+    transform: scale(0.9);
+  }
+  30% {
+    transform: scale(1);
+  }
+  /* 50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1);
+  } */
+}
