--- a/client/src/components/Orders/OrderList.module.css
+++ b/client/src/components/Orders/OrderList.module.css
@@ -1,3 +1,41 @@
 .ordersList {
-    margin-top: 3px;
+  margin-top: 0px;
+}
+
+.pagination-item {
+  margin: 5px;
+  cursor: default;
+  padding: 0 10px;
+  line-height: 40px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 20px;
+  min-width: 40px;
+  text-align: center;
+  box-shadow: none;
+  background: rgb(242, 242, 242);
+  color: #111;
+  border: none;
+}
+
+.active {
+  background: #8a2b06;
+  color: #fff;
+}
+
+.disabled {
+  pointer-events: none;
+  box-shadow: none;
+  color: #999;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  margin: 15px 0px 0px 0px;
 }
