--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -126,3 +126,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.buttons a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+/* .header a:hover {
+  color: #c291e2;
+} */
