--- a/client/src/components/Orders/OrderListItem.module.css
+++ b/client/src/components/Orders/OrderListItem.module.css
@@ -1,29 +1,43 @@
 .item {
-    margin: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid #ccc;
-    list-style: none;
-  }
-  
-  .item h3 {
-    margin: 0 0 0.25rem 0;
-    
-  }
-  
-  .description {
-    margin-top: 0.25rem;
-    font-style: italic;
-  }
-  
-  .price {
-    margin-top: 0.25rem;
-    font-weight: bold;
-    color: #ad5502;
-    font-size: 1.25rem;
-  }
+  margin: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #ccc;
+  list-style: none;
+}
 
-  .details {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.item h3 {
+  margin: 0 0 0.25rem 0;
+}
+
+.description {
+  margin-top: 0.25rem;
+  font-style: italic;
+}
+
+.price {
+  margin-top: 0.25rem;
+  font-weight: bold;
+  color: #ad5502;
+  font-size: 1.25rem;
+}
+
+.details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn {
+  font: inherit;
+  cursor: pointer;
+  background-color: #8a2b06;
+  border: 1px solid #8a2b06;
+  color: white;
+  padding: 0.25rem 2rem;
+  border-radius: 20px;
+  font-weight: bold;
+}
+
+.btn:hover {
+  background-color: #4d1601;
+}
