--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -85,7 +85,7 @@
   margin-top: 10px;
   text-align: right;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   width: 100%;
 }
 
